add support for PGN129285 Ability to represent route details originating from external device
